# cpwalker

./: README.md
cpwalker/: CMakeLists.txt  package.xml
cpwalker_elevation/: CMakeLists.txt  package.xml
cpwalker_elevation/config/: hardware.yaml
cpwalker_elevation/launch/: elevation_acquisition.launch  elevation_system.launch
cpwalker_elevation/scripts/: ELEVATION_acquisition.py  ELEVATION_offset.py  ELEVATION_setpoint_input.py  elevation_acquisition_node.py
cpwalker_exo/: CMakeLists.txt  package.xml
cpwalker_exo/config/: hardware.yaml  trajectory.yaml
cpwalker_exo/launch/: joint_control.launch  sensor_acquisition.launch
cpwalker_exo/scripts/: sensor_acquisition_node.py  sensor_processing_node.py
cpwalker_exo/src/: JointControl.cpp  JointController.cpp  PID.cpp  SPI.cpp  control_node.cpp
cpwalker_navigation/: CMakeLists.txt  package.xml
cpwalker_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_no_map.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.yaml  teb_local_planner_diff_params.yaml
cpwalker_navigation/launch/: [todo]amcl.launch  [todo]gmapping.launch  base_laser.launch  move_base_nomap.launch
cpwalker_traction/: CMakeLists.txt  package.xml  setup.py
cpwalker_traction/config/: hardware.yaml  relay.yaml
cpwalker_traction/launch/: DEBUG_motor_controller_test.launch  encoder_acquisition.launch  motor_controller.launch  (+2 more)
cpwalker_util/: CMakeLists.txt  can_init.sh  package.xml  setup.py
(+26 files in other folders)
