<?xml version="1.0"?>
<package format="2">
  <name>cpwalker</name>
  <version>0.0.1</version>
  <description>CPWalker ROS package</description>

  <maintainer email="miguel.sanchez-m@escuelaing.edu.co">Miguel Sanchez-Manchola</maintainer>
  <author email="miguel.sanchez-m@escuelaing.edu.co">Miguel Sanchez-Manchola</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cpwalker_util</exec_depend>
  <exec_depend>cpwalker_exo</exec_depend>
  <exec_depend>cpwalker_traction</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
