<?xml version="1.0"?>
<package>
  <name>cpwalker_navigation</name>
  <version>0.0.0</version>
  <description> Navigation launch and config files for the CPwalker </description>

  <url type="website">http://ros.org/wiki/summit_xl_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <maintainer email="car@todo.todo">car</maintainer>
 
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>navigation</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>teb_local_planner</run_depend>
  
</package>



